--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -8,7 +8,7 @@
     {% if title %}
         <title>{{ title }}</title>
     {% else %}
-        <title>Movie Reviews</title>
+        <title>Pillow Listings</title>
     {% endif %}
 </head>
 <body style="background: #242F3E;">
