--- a/flask_app/templates/header.html
+++ b/flask_app/templates/header.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block header %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="box-shadow: 0 30px 6px -6px;">
-    <a class="navbar-brand" href="{{ url_for('bpItem.index') }}">Pillow</a>
+    <a class="navbar-brand" href="{{ url_for('bpItem.index') }}">Pillow Listings</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
